--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   path: ^1.9.1
   universal_html: ^2.2.4
   file_picker: ^10.2.0
+  intl: ^0.18.1
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
