--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,12 @@ dependencies:
   file_picker: ^10.2.0
   intl: ^0.18.1
   dio: ^5.4.0
+  flutter_map: ^6.1.0 # hoặc phiên bản mới nhất
+  latlong2: ^0.9.0    # nếu bạn dùng Marker và tọa độ
+  lottie: ^3.1.0
+  fl_chart: ^0.66.2
+  cached_network_image: ^3.3.1
+  image_picker_web: ^4.0.0
 
 dev_dependencies:
   flutter_test:
